# ExtraTasks

./: decorator.py  extra.py  pyproject.toml
src/: decorator.py  extra_api.py  generators.py  masks.py  processing.py  pytest_module.py  widget.py
tests/: extra_api.py  test_extra.py  test_generators.py  test_masks.py  test_processing.py  test_pytest_module.py  test_widget.py
