[tool.poetry]
name = "extratasks"
version = "0.1.0"
description = ""
authors = ["vavil <vavilon164@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
mypy = "^1.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
